Fix scrollbar

--- a/frontend/src/styles/App.module.css
+++ b/frontend/src/styles/App.module.css
@@ -12,4 +12,6 @@
     flex: 1;
     
     display: flex;
+
+    min-height: 0;
 }
